# Jeiary

./: .coverage  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  gunicoirn 명령어.md  log.txt  temp.md  temp.py
backend/: .coverage  .dockerignore  .env.example  Dockerfile  Modelfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  temp.py  test.py
backend/alembic/: env.py
backend/alembic/versions/: 0d3659266f4c_create_chat_histories_table.py  54435a1083c9_create_user_and_schedule_tables.py  5f57de99d9c7_seed_test_user2.py  665613919481_create_notifications_table.py  95d25bf30d62_add_date_column_and_modify_time_columns_.py  ad5a9d560c3a_add_refresh_tokens_table.py  be1e711475b4_seed_test_user.py  cf120059b194_change_to_start_time_and_end_time_.py  fe8bce9ff145_create_job_histories_table.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: exceptions.py  limiter.py  scheduler.py  security.py  tools.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  chat.py  job_history.py  notification.py  refresh_token.py  schedule.py  user.py
backend/app/repositories/: base.py  chat_repo.py  job_history_repo.py  notification_repo.py  refresh_token_repo.py  schedule_repo.py  user_repo.py
backend/app/schemas/: ai.py  auth.py  schedule.py  user.py
backend/app/services/: ai_agent.py  ai_router.py  ai_service.py  auth_service.py  briefing_service.py  cleanup_service.py  memory_service.py  schedule_service.py
backend/tests/: conftest.py  test_scheduler_integration.py
(+84 files in other folders)
